<resources>
    <string name="app_name">RoomRentalApplication</string>
    <string name="activity_animation_duration" translatable="false">250</string>
    <string name="v1_your">your </string>
    <string name="v1_life_styles">lifestyle </string>
    <string name="v1_supper_app">supperapp</string>
    <string name="v1_welcome_back">Welcome\nBack</string>
    <string name="v1_username">Username</string>
    <string name="v1_password">Password</string>
    <string name="v1_sign_in">Sign in</string>
    <string name="v1_sign_in_u"><u>Sign in</u></string>
    <string name="v1_sign_up">Sign up</string>
    <string name="v1_sign_up_u"><u>Sign up</u></string>
    <string name="v1_forgot_password"><u>Forgot Password</u></string>
    <string name="v1_create_account">Create\nAccount</string>
    <string name="v1_name">Name</string>
    <string name="v1_email">Email</string>
    <string name="v1_citizen_id">Citizen Id</string>
    <string name="v1_email_">Email:</string>
    <string name="v1_phone">Phone</string>
    <string name="v1_phone_">Phone:</string>
    <string name="v1_remember_password">Remember password</string>
    <string name="v1_wrong_field">* The username or password is incorrect, please try again</string>
    <string name="v1_require_field">* Requires each field to be longer than 6 characters</string>
    <string name="v1_error_save_database">* An error occurred while committing to the local database</string>
    <string name="v1_search">Search</string>
    <string name="v1_fav">Favourite</string>
    <string name="v1_messenger">Messenger</string>
    <string name="v1_personal">Personal</string>
    <string name="v1_edit_profile">Edit profile</string>
    <string name="v1_require_field_sign_up">* Requires username and password to be longer than 6 characters</string>
    <string name="v1_require_field_not_blank">* Requires each field to be not blank</string>
    <string name="v1_wrong_email">* Wrong email</string>
    <string name="v1_wrong_citizen_id">* Wrong citizen id</string>
    <string name="v1_wrong_phone">* Wrong phone</string>
    <string name="v1_username_is_existed">* Username already existed</string>
    <string name="v1_let_go">Let\'s go</string>
    <string name="v1_ready_to_get_closer_to_the_app">Ready to get closer to the app?</string>
    <string name="v1_welcome_onboard">Welcome onboard!</string>
    <string name="v1_start_entering_the_address">Start entering the address</string>
    <string name="v1_find_the_best_place">Find the best place</string>
    <string name="v1_find_the_apartment_that_fits_your_lifestyle">Find the apartment that fits your lifestyle</string>
    <string name="v1_we_have_a_solution_for_every_needs">We have a solution for every needs</string>
    <string name="v1_discover_our_most_popular_cities">Discover our most popular cities</string>
    <string name="v1_the_best_solutions_in_the_coolest_cities_you_just_have_to_make_a_reservation">The best solutions in the coolest cities, you just have to make a reservation</string>
    <string name="v1_properties">Properties</string>
    <string name="v1_account">Account</string>
    <string name="v1_setting">Setting</string>
    <string name="v1_listing">Listing</string>
    <string name="v1_add_listing">Add listing</string>
    <string name="v1_add_property">Add property</string>
    <string name="v1_add_room">Add room</string>
    <string name="v1_bank">Bank Information</string>
    <string name="v1_security">Access and security</string>
    <string name="v1_transaction">Transaction history</string>
    <string name="v1_account_setting">Account settings</string>
    <string name="v1_management">Management</string>
    <string name="v1_appointment">Appointment</string>
    <string name="v1_requests">Requests</string>
    <string name="v1_request_detail">Request detail</string>
    <string name="v1_not_implemented_yet">Not implemented yet!!</string>
    <string name="v1_logout">Logout</string>
    <string name="v1_do_you_want_to_logout">Do you want to logout?</string>
    <string name="v1_back">Back</string>
    <string name="v1_landlord">Landlord</string>
    <string name="v1_where_you_ll_be">Where you\'ll be</string>
    <string name="v1_properties_details">Property Details</string>
    <string name="v1_property"> Property</string>
    <string name="v1_details">Details</string>
    <string name="v1_see_more">See more</string>
    <string name="v1_see_less">See less</string>
    <string name="v1_rooms">Rooms</string>
    <string name="v1_bed_room">%s Bedrooms</string>
    <string name="v1_room_sqrt">%s sqft</string>
    <string name="v1_room_price">$%s/mo</string>
    <string name="v1_page_current_total">%d/%d</string>
    <string name="v1_night_price">$%.2f</string>
    <string name="v1_book_now">Book now</string>
    <string name="v1_night">/day</string>
    <string name="v1_multi_night">/ %s days</string>
    <string name="v1_lake_view_apartment">Lake View Apartment</string>
    <string name="v1_view">View</string>
    <string name="v1_price">Price</string>
    <string name="v1_pay_now">Pay now</string>
    <string name="v1_dates">Select dates</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="january">January</string>
    <string name="april">April</string>
    <string name="july">July</string>
    <string name="october">October</string>
    <string name="february">February</string>
    <string name="may">May</string>
    <string name="august">August</string>
    <string name="november">November</string>
    <string name="march">March</string>
    <string name="june">June</string>
    <string name="september">September</string>
    <string name="december">December</string>
    <string name="calendar_title">%s, %d</string>
    <string name="v1_clear">Clear</string>
    <string name="v1_total">Total</string>
    <string name="v1_price_day">Price/day:</string>
    <string name="v1_days_rent_title">Days rent:</string>
    <string name="v1_amount_title">Amount:</string>
    <string name="v1_price_days">$%.1f</string>
    <string name="v1_date_rent">X %d</string>
    <string name="v1_night_rent">/ %d days</string>
    <string name="v1_rent">Rent</string>
    <string name="v1_request_information">Request information</string>
    <string name="v1_rent_request_information">Information</string>
    <string name="v1_rent_request_information_customer">Customer information</string>
    <string name="v1_your_name">Your name:</string>
    <string name="v1_check_in">Check in:</string>
    <string name="v1_check_out">Check out:</string>
    <string name="v1_confirm_checking_info">Checking carefully the information about rent request to make sure you don\'t send them wrong</string>
    <string name="v1_rent_information">Rent information</string>
    <string name="v1_deposit">Deposit</string>
    <string name="v1_thirty_five_percent">(35%)</string>
    <string name="v1_back_to_home">Back Home</string>
    <string name="v1_success">Success!</string>
    <string name="v1_confirmed">Confirmed</string>
    <string name="v1_failed">Failed</string>
    <string name="v1_booking_confirmation">You\'ll get an email along with\nyour booking confirmation</string>
    <string name="v1_failed_confirmation">Something wrong!</string>
    <string name="v1_nationality">Nationality</string>
    <string name="v1_date_of_birth">Date of birth</string>
    <string name="v1_submit">Submit</string>
    <string name="v1_afghanistan">AFGHANISTAN</string>
    <string name="v1_åland_islands">ÅLAND ISLANDS</string>
    <string name="v1_albania">ALBANIA</string>
    <string name="v1_algeria">ALGERIA</string>
    <string name="v1_american_samoa">AMERICAN SAMOA</string>
    <string name="v1_andorra">ANDORRA</string>
    <string name="v1_angola">ANGOLA</string>
    <string name="v1_anguilla">ANGUILLA</string>
    <string name="v1_antarctica">ANTARCTICA</string>
    <string name="v1_antigua_and_barbuda">ANTIGUA AND BARBUDA</string>
    <string name="v1_argentina">ARGENTINA</string>
    <string name="v1_armenia">ARMENIA</string>
    <string name="v1_aruba">ARUBA</string>
    <string name="v1_australia">AUSTRALIA</string>
    <string name="v1_austria">AUSTRIA</string>
    <string name="v1_azerbaijan">AZERBAIJAN</string>
    <string name="v1_bahamas">BAHAMAS</string>
    <string name="v1_bahrain">BAHRAIN</string>
    <string name="v1_bangladesh">BANGLADESH</string>
    <string name="v1_barbados">BARBADOS</string>
    <string name="v1_belarus">BELARUS</string>
    <string name="v1_belgium">BELGIUM</string>
    <string name="v1_belize">BELIZE</string>
    <string name="v1_benin">BENIN</string>
    <string name="v1_bermuda">BERMUDA</string>
    <string name="v1_bhutan">BHUTAN</string>
    <string name="v1_bolivia">BOLIVIA</string>
    <string name="v1_bonaire_sint_eustatius_and_saba">BONAIRE, SINT EUSTATIUS AND SABA</string>
    <string name="v1_bosnia_and_herzegovina">BOSNIA AND HERZEGOVINA</string>
    <string name="v1_botswana">BOTSWANA</string>
    <string name="v1_bouvet_island">BOUVET ISLAND</string>
    <string name="v1_brazil">BRAZIL</string>
    <string name="v1_british_indian_ocean_territory">BRITISH INDIAN OCEAN TERRITORY</string>
    <string name="v1_british_virgin_islands">BRITISH VIRGIN ISLANDS</string>
    <string name="v1_brunei">BRUNEI</string>
    <string name="v1_bulgaria">BULGARIA</string>
    <string name="v1_burkina_faso">BURKINA FASO</string>
    <string name="v1_burundi">BURUNDI</string>
    <string name="v1_cambodia">CAMBODIA</string>
    <string name="v1_cameroon">CAMEROON</string>
    <string name="v1_canada">CANADA</string>
    <string name="v1_cape_verde">CAPE VERDE</string>
    <string name="v1_cayman_islands">CAYMAN ISLANDS</string>
    <string name="v1_central_african_republic">CENTRAL AFRICAN REPUBLIC</string>
    <string name="v1_chad">CHAD</string>
    <string name="v1_chile">CHILE</string>
    <string name="v1_china">CHINA</string>
    <string name="v1_christmas_island">CHRISTMAS ISLAND</string>
    <string name="v1_cocos_islands">COCOS ISLANDS</string>
    <string name="v1_colombia">COLOMBIA</string>
    <string name="v1_comoros">COMOROS</string>
    <string name="v1_congo">CONGO</string>
    <string name="v1_cook_islands">COOK ISLANDS</string>
    <string name="v1_costa_rica">COSTA RICA</string>
    <string name="v1_côte_divoire">CÔTE D’IVOIRE</string>
    <string name="v1_croatia">CROATIA</string>
    <string name="v1_cuba">CUBA</string>
    <string name="v1_curaçao">CURAÇAO</string>
    <string name="v1_cyprus">CYPRUS</string>
    <string name="v1_czech_republic">CZECH REPUBLIC</string>
    <string name="v1_denmark">DENMARK</string>
    <string name="v1_djibouti">DJIBOUTI</string>
    <string name="v1_dominica">DOMINICA</string>
    <string name="v1_dominican_republic">DOMINICAN REPUBLIC</string>
    <string name="v1_ecuador">ECUADOR</string>
    <string name="v1_egypt">EGYPT</string>
    <string name="v1_el_salvador">EL SALVADOR</string>
    <string name="v1_room_name">Room name</string>
    <string name="v1_description">Description</string>
    <string name="v1_images">Images</string>
    <string name="v1_room_size">Room size</string>
    <string name="v1_capacity">Capacity</string>
    <string name="v1_at_what_price">- At what price do you want to rent it</string>
    <string name="v1_title_price_2">- Does the price include all utilities?</string>
    <string name="v1_hourly_price">Hourly price</string>
    <string name="v1_daily_price">Daily price</string>
    <string name="v1_weekly_price">Weekly price</string>
    <string name="v1_monthly_price">Monthly price</string>
    <string name="v1_yes">Yes</string>
    <string name="v1_no">No</string>
    <string name="v1_how_much">How much is the deposit?</string>
    <string name="v1_enter_deposit">Enter deposit</string>
    <string name="v1_services">Services</string>
</resources>